fix alignment in sections with no padding, add 404 page

--- a/src/components/css/main.scss
+++ b/src/components/css/main.scss
@@ -18,6 +18,10 @@
   padding: 0;
 }
 
+.with-padding {
+  padding: 0 $spacing;
+}
+
 .no-margin {
   margin: 0;
 }
